# pyscaffoldext-elegent-pythonpackage

./: .coveragerc  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  LICENSE.txt  README.md  create_venv.sh  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: conf.py  index.md  requirements.txt
src/pyscaffoldext/elegent_pythonpackage/: __init__.py  extension.py
src/pyscaffoldext/elegent_pythonpackage/templates/: __init__.py  authors.template  bug_report.template  contributing.template  create_venv.template  license.template  pre-commit-config.template  readme.template  tox_ini.template
tests/: test_custom_extension.py  test_pythonpackage.py
