# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = pyscaffoldext-elegent-pythonpackage
description = PyScaffold extension for Python packages in the Elegent style
author = DaanVanHauwermeiren
author_email = daan.vanhauwermeiren@ele.gent
license = Propriatery
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/Ele-gent/pyscaffoldext-elegent-pythonpackage
# Add here related links, for example:
project_urls =
    Documentation = https://pyscaffold.org/
    Source = https://github.com/Ele-gent/pyscaffoldext-elegent-pythonpackage
    Tracker = https://github.com/Ele-gent/pyscaffoldext-elegent-pythonpackage/issues
    Download = https://github.com/Ele-gent/pyscaffoldext-elegent-pythonpackage/#files
    Changelog = https://github.com/Ele-gent/pyscaffoldext-elegent-pythonpackage/blob/master/CHANGELOG.rst


# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Environment :: Console
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    pyscaffold>=4.5,<5.0a0
    pyscaffoldext-markdown>=0.4.1,<1.0a0


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install pyscaffoldext-elegent-pythonpackage[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    tox
    pre-commit
    setuptools_scm
    virtualenv
    configupdater
    pytest
    pytest-cov
    pytest-xdist

[options.entry_points]
pyscaffold.cli =
    elegent_pythonpackage = pyscaffoldext.elegent_pythonpackage.extension:ElegentPythonpackage
# Add here console scripts like:
# console_scripts =
#     script_name = pyscaffoldext.elegent_pythonpackage.module:function
# For example:
# console_scripts =
#     fibonacci = pyscaffoldext.elegent_pythonpackage.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov pyscaffoldext.elegent_pythonpackage --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
markers =
    slow: mark tests as slow (deselect with '-m "not slow"')
    system: mark end-to-end system tests

[aliases]
dists = sdist bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.5
package = elegent_pythonpackage
extensions =
    cirrus
    custom_extension
    markdown
    namespace
    no_skeleton
    pre_commit
namespace = pyscaffoldext
